--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="h-screen v-screen flex items-center justify-center">
   <h1 class="text-3xl font-bold underline">
     kessi.ph
   </h1>
