--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="h-screen v-screen flex items-center justify-center">
-  <h1 class="text-3xl font-bold underline">
-    kessi.ph
+<body class="h-screen v-screen flex flex-col items-center justify-center">
+  <img src="KESSI-2022-LOGO.png" style="width: 140px;" />
+  <h1 class="text-3xl font-bold mt-4">
+    website will be up soon.
   </h1>
 </body>
 </html>
