Add specialized programs section, update services layout, and implement modal functionality
- Added new Specialized Programs section with 4 programs
- Restructured services section to display 4 services in responsive grid
- Updated company branding to King Edward Security Services Inc.
- Added modal popup system for KESSI In Action videos/photos
- Implemented active navigation highlighting
- Added EmailJS integration for contact form
- Updated hero carousel transition timing
- Enhanced About section with mission, vision, and core values

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KESSI Security Agency</title>
+    <title>King Edward Security Services Inc.</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <style>
@@ -14,7 +14,7 @@
         }
         .hero-carousel .carousel-item {
             display: none;
-            transition: opacity 1s ease-in-out;
+            transition: opacity 5s ease-in-out;
         }
         .hero-carousel .carousel-item.active {
             display: block;
@@ -131,7 +131,7 @@
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
             <div class="flex items-center space-x-3">
                 <img src="assets/img/kessi-logo-sm.png" alt="KESSI Logo" class="h-12 w-auto object-contain" style="max-height:48px;">
-                <a href="#" class="text-2xl font-bold text-white">KESSI</a>
+                <a href="#" class="text-2xl font-bold text-white">KING EDWARD SECURITY SERVICES INC.</a>
             </div>
             <nav class="hidden md:flex items-center space-x-8">
                 <a href="#home" class="nav-link text-gray-300">Home</a>
@@ -197,8 +197,8 @@
                     <img src="assets/img/guardwithuniform5.jpg" alt="Advanced Surveillance" class="w-full h-full object-cover">
                     <div class="absolute inset-0 bg-black/60 flex items-center justify-center">
                         <div class="text-center text-white p-4">
-                            <h1 class="text-4xl md:text-6xl font-black uppercase tracking-wider">24/7 Surveillance</h1>
-                            <p class="mt-4 text-lg md:text-xl max-w-2xl">State-of-the-art technology ensuring constant monitoring and rapid response.</p>
+                            <h1 class="text-4xl md:text-6xl font-black uppercase tracking-wider">Surveillance</h1>
+                            <p class="mt-4 text-lg md:text-xl max-w-2xl">Constant monitoring and rapid response.</p>
                         </div>
                     </div>
                 </div>
@@ -241,24 +241,100 @@
         <!-- Services Section -->
         <section id="services" class="container mx-auto px-6 py-16">
             <h2 class="text-3xl font-bold text-center mb-12">Our Core Services</h2>
-            <div class="grid md:grid-cols-3 gap-8">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 max-w-7xl mx-auto">
                 <!-- Service 1 -->
                 <div class="service-card bg-gray-800 rounded-lg overflow-hidden text-center p-8">
-                    <img src="assets/img/kessi-guard4.jpg" alt="Threat Assessment" class="w-full h-48 object-cover rounded-md mb-6">
-                    <h3 class="text-xl font-bold mb-2">Threat Assessment</h3>
-                    <p class="text-gray-400">Identify potential risks and vulnerabilities in your environment to implement effective preventive measures before issues arise.</p>
+                    <img src="assets/img/kessi-guard4.jpg" alt="Security Personnel" class="w-full h-48 object-cover rounded-md mb-6">
+                    <h3 class="text-xl font-bold mb-2">Security Personnel (uniformed guards & supervisors)</h3>
+                    <p class="text-gray-400">Professional security personnel providing comprehensive protection and surveillance services.</p>
                 </div>
                 <!-- Service 2 -->
                 <div class="service-card bg-gray-800 rounded-lg overflow-hidden text-center p-8">
-                    <img src="assets/img/guardwithuniform2.jpg" alt="Threat Assessment" class="w-full h-48 object-cover rounded-md mb-6">
-                    <h3 class="text-xl font-bold mb-2">24/7 On-Site Protection</h3>
-                    <p class="text-gray-400">Provide highly trained security personnel for round-the-clock monitoring, patrols, and rapid response to incidents.</p>
+                    <img src="assets/img/guardwithuniform2.jpg" alt="Security Automation" class="w-full h-48 object-cover rounded-md mb-6">
+                    <h3 class="text-xl font-bold mb-2">Security Automation & CCTV Installation</h3>
+                    <p class="text-gray-400">Advanced security systems and CCTV installation for comprehensive monitoring and protection.</p>
                 </div>
                 <!-- Service 3 -->
                 <div class="service-card bg-gray-800 rounded-lg overflow-hidden text-center p-8">
-                    <img src="assets/img/guardwithuniform3.jpg" alt="Threat Assessment" class="w-full h-48 object-cover rounded-md mb-6">
-                    <h3 class="text-xl font-bold mb-2">Emergency Response Planning</h3>
-                    <p class="text-gray-400">Develop and execute customized response plans to ensure swift action during crises, minimizing harm and ensuring safety.</p>
+                    <img src="assets/img/guardwithuniform3.jpg" alt="Security Training" class="w-full h-48 object-cover rounded-md mb-6">
+                    <h3 class="text-xl font-bold mb-2">Security & Safety Training (firearms, first aid, response)</h3>
+                    <p class="text-gray-400">Comprehensive training programs covering firearms, first aid, and emergency response protocols.</p>
+                </div>
+                <!-- Service 4 -->
+                <div class="service-card bg-gray-800 rounded-lg overflow-hidden text-center p-8">
+                    <img src="assets/img/guardwithuniform4.jpg" alt="Surveillance Services" class="w-full h-48 object-cover rounded-md mb-6">
+                    <h3 class="text-xl font-bold mb-2">Surveillance — fixed & mobile</h3>
+                    <p class="text-gray-400">Professional surveillance services using both fixed installations and mobile units for complete coverage.</p>
+                </div>
+            </div>
+        </section>
+
+        <div class="section-divider"></div>
+
+        <!-- Specialized Programs Section -->
+        <section id="specialized-programs" class="container mx-auto px-6 py-16">
+            <h2 class="text-3xl font-bold text-center mb-12">Specialized Programs</h2>
+            <div class="max-w-5xl mx-auto">
+                <div class="grid md:grid-cols-2 gap-8">
+                    <!-- Program 1 -->
+                    <div class="bg-gray-800 rounded-lg p-8 hover:bg-gray-750 transition-colors">
+                        <div class="flex items-start space-x-4">
+                            <div class="flex-shrink-0">
+                                <svg class="w-8 h-8 text-orange-500 mt-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" d="M3 4a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zm0 4a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zm0 4a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zm0 4a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path>
+                                </svg>
+                            </div>
+                            <div>
+                                <h3 class="text-xl font-bold mb-3 text-white">Crisis Management Training</h3>
+                                <p class="text-gray-400">Comprehensive training programs including Command Post Exercises (CPX), Field Training Exercises (FTX), and tabletop simulations to prepare teams for crisis situations.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Program 2 -->
+                    <div class="bg-gray-800 rounded-lg p-8 hover:bg-gray-750 transition-colors">
+                        <div class="flex items-start space-x-4">
+                            <div class="flex-shrink-0">
+                                <svg class="w-8 h-8 text-orange-500 mt-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" d="M18 8a6 6 0 01-7.743 5.743L10 14l-1 1-1 1H6v2H2v-4l4.257-4.257A6 6 0 1118 8zm-6-4a1 1 0 100 2 2 2 0 012 2 1 1 0 102 0 4 4 0 00-4-4z" clip-rule="evenodd"></path>
+                                </svg>
+                            </div>
+                            <div>
+                                <h3 class="text-xl font-bold mb-3 text-white">Kidnap & Ransom Response</h3>
+                                <p class="text-gray-400">Specialized response protocols and negotiation training for kidnap and ransom situations, ensuring the safety of personnel and effective crisis resolution.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Program 3 -->
+                    <div class="bg-gray-800 rounded-lg p-8 hover:bg-gray-750 transition-colors">
+                        <div class="flex items-start space-x-4">
+                            <div class="flex-shrink-0">
+                                <svg class="w-8 h-8 text-orange-500 mt-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" d="M3 3a1 1 0 000 2v8a2 2 0 002 2h2.586l-1.293 1.293a1 1 0 101.414 1.414L10 15.414l2.293 2.293a1 1 0 001.414-1.414L12.414 15H15a2 2 0 002-2V5a1 1 0 100-2H3zm11.707 4.707a1 1 0 00-1.414-1.414L10 9.586 8.707 8.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path>
+                                </svg>
+                            </div>
+                            <div>
+                                <h3 class="text-xl font-bold mb-3 text-white">Vulnerability Surveys & Threat Assessments</h3>
+                                <p class="text-gray-400">Comprehensive security evaluations to identify potential vulnerabilities and assess threats, providing actionable recommendations for enhanced protection.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Program 4 -->
+                    <div class="bg-gray-800 rounded-lg p-8 hover:bg-gray-750 transition-colors">
+                        <div class="flex items-start space-x-4">
+                            <div class="flex-shrink-0">
+                                <svg class="w-8 h-8 text-orange-500 mt-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" d="M12.395 2.553a1 1 0 00-1.45-.385c-.345.23-.614.558-.822.88-.214.33-.403.713-.57 1.116-.334.804-.614 1.768-.84 2.734a31.365 31.365 0 00-.613 3.58 2.64 2.64 0 01-.945-1.067c-.328-.68-.398-1.534-.398-2.654A1 1 0 005.05 6.05 6.981 6.981 0 003 11a7 7 0 1011.95-4.95c-.592-.591-.98-.985-1.348-1.467-.363-.476-.724-1.063-1.207-2.03zM12.12 15.12A3 3 0 017 13s.879.5 2.5.5c0-1 .5-4 1.25-4.5.5 1 .786 1.293 1.371 1.879A2.99 2.99 0 0113 13a2.99 2.99 0 01-.879 2.121z" clip-rule="evenodd"></path>
+                                </svg>
+                            </div>
+                            <div>
+                                <h3 class="text-xl font-bold mb-3 text-white">Executive Protection Training</h3>
+                                <p class="text-gray-400">Specialized firearms familiarization and defensive driving programs designed for executive protection and high-risk security scenarios.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -273,9 +349,14 @@
                 </div>
                 <div class="md:w-1/2">
                     <h2 class="text-3xl font-bold mb-4">About KESSI</h2>
-                    <p class="text-gray-400 mb-4">Founded on the principles of integrity, vigilance, and excellence, KESSI has become a trusted name in the security industry. Our team is composed of former military, law enforcement, and intelligence professionals who bring a wealth of experience to every operation.</p>
-                    <p class="text-gray-400">We are committed to providing our clients with the highest level of security services, utilizing a combination of highly trained personnel and advanced technology to ensure the safety and security of those we protect.</p>
+                    <p class="text-gray-400 mb-4">Founded March 2, 2006, KingEdward Security Services, Inc. (KESSI) is a Philippine private security agency that provides security services to private and government establishments nationwide. The organization emphasizes professional standards and continuous growth since inception.</p>
+                    <h2 class="text-3xl font-bold mb-4">Mission</h2>
+                    <p class="text-gray-400 mb-4">Provide total security protection of lives and properties through reliable, disciplined and well-trained security personnel, supported by continuous training and proper equipment.</p>
+                    <h2 class="text-3xl font-bold mb-4">Vision and Core Values</h2>
+                    <p class="text-gray-400 mb-4">Vision: To become one of the best security service providers in the Philippines — recognized for standard quality performance and professionalism.</p>
+                    <p class="text-gray-400 mb-4">Core Values: Kindness, Efficiency, Security & Safety, Service, and Integrity — supported by a culture of excellence, learning and adaptability.</p>
                 </div>
+                
             </div>
         </section>
 
@@ -494,7 +575,7 @@
             <div class="max-w-3xl mx-auto space-y-12">
                 <div id="training">
                     <h3 class="text-2xl font-bold mb-4">Our Training Programs</h3>
-                    <p class="text-gray-400">Our agents undergo rigorous, continuous training programs that exceed industry standards. We cover tactical skills, de-escalation techniques, emergency medical response, and advanced surveillance technology to ensure our team is prepared for any scenario.</p>
+                    <p class="text-gray-400">Our security personnel undergo rigorous, continuous training programs that exceed industry standards. We cover tactical skills, de-escalation techniques, emergency medical response, and advanced surveillance technology to ensure our team is prepared for any scenario.</p>
                 </div>
                 <div id="requirements">
                     <h3 class="text-2xl font-bold mb-4">Candidate Requirements</h3>
@@ -567,20 +648,7 @@
                             <path fill-rule="evenodd" d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z" clip-rule="evenodd" />
                         </svg>
                     </a>
-                    <!-- Twitter Icon -->
-                    <a href="#" class="text-gray-400 hover:text-white transition-colors">
-                        <span class="sr-only">Twitter</span>
-                        <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
-                            <path d="M8.29 20.251c7.547 0 11.675-6.253 11.675-11.675 0-.178 0-.355-.012-.53A8.348 8.348 0 0022 5.92a8.19 8.19 0 01-2.357.646 4.118 4.118 0 001.804-2.27 8.224 8.224 0 01-2.605.996 4.107 4.107 0 00-6.993 3.743 11.65 11.65 0 01-8.457-4.287 4.106 4.106 0 001.27 5.477A4.072 4.072 0 012.8 9.71v.052a4.105 4.105 0 003.292 4.022 4.095 4.095 0 01-1.853.07 4.108 4.108 0 003.834 2.85A8.233 8.233 0 012 18.407a11.616 11.616 0 006.29 1.84" />
-                        </svg>
-                    </a>
-                    <!-- LinkedIn Icon -->
-                    <a href="#" class="text-gray-400 hover:text-white transition-colors">
-                        <span class="sr-only">LinkedIn</span>
-                        <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
-                            <path fill-rule="evenodd" d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z" clip-rule="evenodd" />
-                        </svg>
-                    </a>
+                   
                 </div>
             </div>
             <div class="mt-8 border-t border-gray-700 pt-4 text-center text-gray-500 text-sm">
