--- a/index.html
+++ b/index.html
@@ -5,6 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KESSI Security Agency</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Responsive Google Map embed for KINGEDWARD SECURITY SERVICES INC -->
+    <style>
+    /* Paste this in your site CSS (or keep inline for one-off) */
+    .map-responsive {
+        position: relative;
+        width: 100%;
+        padding-bottom: 56.25%; /* 16:9 aspect ratio — change if you want taller/shorter */
+        overflow: hidden;
+        border-radius: 8px;
+        box-shadow: 0 6px 18px rgba(0,0,0,0.08);
+    }
+    .map-responsive iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border: 0;
+    }
+    /* small helper to keep map height on narrow screens if preferred */
+    @media (max-width: 480px) {
+        .map-responsive { padding-bottom: 75%; } /* taller on phones */
+    }
+    </style>
     <style>
         body {
             font-family: 'Futura', 'Futura PT', 'Avenir', 'Century Gothic', sans-serif;
@@ -45,7 +69,7 @@
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
             <div class="flex items-center space-x-3">
                 <img src="assets/img/kessi-logo-sm.png" alt="KESSI Logo" class="h-12 w-auto object-contain" style="max-height:48px;">
-                <a href="#" class="text-2xl font-bold text-white">KESSI</a>
+                <a href="#" class="text-2xl font-bold text-white">KingEdward Security Services Inc. KESSI</a>
             </div>
             <nav class="hidden md:flex items-center space-x-8">
                 <a href="#home" class="nav-link text-gray-300">Home</a>
@@ -109,8 +133,8 @@
                     <img src="assets/img/guardwithuniform5.jpg" alt="Advanced Surveillance" class="w-full h-full object-cover">
                     <div class="absolute inset-0 bg-black/60 flex items-center justify-center">
                         <div class="text-center text-white p-4">
-                            <h1 class="text-4xl md:text-6xl font-black uppercase tracking-wider">24/7 Surveillance</h1>
-                            <p class="mt-4 text-lg md:text-xl max-w-2xl">State-of-the-art technology ensuring constant monitoring and rapid response.</p>
+                            <h1 class="text-4xl md:text-6xl font-black uppercase tracking-wider">24/7 On-premise Security</h1>
+                            <p class="mt-4 text-lg md:text-xl max-w-2xl">...</p>
                         </div>
                     </div>
                 </div>
@@ -119,7 +143,7 @@
                     <img src="assets/img/kessi-guard3.jpg" alt="Expert Security Personnel" class="w-full h-full object-cover">
                     <div class="absolute inset-0 bg-black/60 flex items-center justify-center">
                         <div class="text-center text-white p-4">
-                            <h1 class="text-4xl md:text-6xl font-black uppercase tracking-wider">Highly Trained Agents</h1>
+                            <h1 class="text-4xl md:text-6xl font-black uppercase tracking-wider">Highly Trained Security Personnel</h1>
                             <p class="mt-4 text-lg md:text-xl max-w-2xl">Our personnel are rigorously trained to handle any situation with professionalism and discretion.</p>
                         </div>
                     </div>
@@ -142,19 +166,19 @@
             <div class="grid md:grid-cols-3 gap-8">
                 <!-- Service 1 -->
                 <div class="service-card bg-gray-800 rounded-lg overflow-hidden text-center p-8">
-                    <img src="assets/img/kessi-guard4.jpg" alt="Threat Assessment" class="w-full h-48 object-cover rounded-md mb-6">
-                    <h3 class="text-xl font-bold mb-2">Threat Assessment</h3>
+                    <img src="assets/img/kessi-guard4.jpg" alt="Threat Assessment" class="w-full h-48 object-cover object-[25%_33%] rounded-md mb-6">
+                    <h3 class="text-xl font-bold mb-2"> Security & Safety Training<br/>(firearms, first aid, response)</h3>
                     <p class="text-gray-400">Identify potential risks and vulnerabilities in your environment to implement effective preventive measures before issues arise.</p>
                 </div>
                 <!-- Service 2 -->
                 <div class="service-card bg-gray-800 rounded-lg overflow-hidden text-center p-8">
-                    <img src="assets/img/guardwithuniform2.jpg" alt="Threat Assessment" class="w-full h-48 object-cover rounded-md mb-6">
-                    <h3 class="text-xl font-bold mb-2">24/7 On-Site Protection</h3>
+                    <img src="assets/img/guardwithuniform2.jpg" alt="Threat Assessment" class="w-full h-48 object-cover object-[25%_35%] rounded-md mb-6">
+                    <h3 class="text-xl font-bold mb-2">Security Personnel<br>(uniformed guards & supervisors)</h3>
                     <p class="text-gray-400">Provide highly trained security personnel for round-the-clock monitoring, patrols, and rapid response to incidents.</p>
                 </div>
                 <!-- Service 3 -->
                 <div class="service-card bg-gray-800 rounded-lg overflow-hidden text-center p-8">
-                    <img src="assets/img/guardwithuniform3.jpg" alt="Threat Assessment" class="w-full h-48 object-cover rounded-md mb-6">
+                    <img src="assets/img/guardwithuniform3.jpg" alt="Threat Assessment" class="w-full h-48 object-cover object-[25%_35%] rounded-md mb-6">
                     <h3 class="text-xl font-bold mb-2">Emergency Response Planning</h3>
                     <p class="text-gray-400">Develop and execute customized response plans to ensure swift action during crises, minimizing harm and ensuring safety.</p>
                 </div>
@@ -167,12 +191,11 @@
         <section id="about" class="container mx-auto px-6 py-16">
             <div class="flex flex-col md:flex-row items-center gap-12">
                 <div class="md:w-1/2">
-                     <img src="assets/img/guardwithuniform4.jpg" alt="About KESSI" class="rounded-lg shadow-2xl">
+                     <img src="assets/img/801.png" alt="About KESSI" class="rounded-lg shadow-2xl grayscale">
                 </div>
                 <div class="md:w-1/2">
                     <h2 class="text-3xl font-bold mb-4">About KESSI</h2>
-                    <p class="text-gray-400 mb-4">Founded on the principles of integrity, vigilance, and excellence, KESSI has become a trusted name in the security industry. Our team is composed of former military, law enforcement, and intelligence professionals who bring a wealth of experience to every operation.</p>
-                    <p class="text-gray-400">We are committed to providing our clients with the highest level of security services, utilizing a combination of highly trained personnel and advanced technology to ensure the safety and security of those we protect.</p>
+                    <p class="text-gray-400 mb-4">Founded March 2, 2006, KingEdward Security Services, Inc. (KESSI) is a Philippine private security agency that provides security services to private and government establishments nationwide. The organization emphasizes professional standards and continuous growth since inception.</p>
                 </div>
             </div>
         </section>
@@ -184,16 +207,20 @@
             <h2 class="text-3xl font-bold text-center mb-12">Join Our Team</h2>
             <div class="max-w-3xl mx-auto space-y-12">
                 <div id="training">
-                    <h3 class="text-2xl font-bold mb-4">Our Training Programs</h3>
-                    <p class="text-gray-400">Our agents undergo rigorous, continuous training programs that exceed industry standards. We cover tactical skills, de-escalation techniques, emergency medical response, and advanced surveillance technology to ensure our team is prepared for any scenario.</p>
+                    <h3 class="text-2xl font-bold mb-4">Recruitment &amp; Training</h3>
+                    <p class="text-gray-400">Hiring emphasizes quality: written exams, communication evaluation, background checks, aptitude testing, drug & medical screening. Training covers legal aspects (RA 5487), incident reporting, firearms proficiency, emergency response, basic investigation, first aid and supervisory skills. </p>
                 </div>
                 <div id="requirements">
-                    <h3 class="text-2xl font-bold mb-4">Candidate Requirements</h3>
-                    <p class="text-gray-400">We seek candidates with a background in military, law enforcement, or a related field. A high level of physical fitness, impeccable integrity, and the ability to operate under pressure are essential. All applicants must pass a comprehensive background check and psychological evaluation.</p>
+                    <h3 class="text-2xl font-bold mb-4">Equipment & Assets</h3>
+                    <p class="text-gray-400">KESSI maintains vehicles, motorcycles, patrol equipment, communications gear, metal detectors, flashlights and firearms inventory aligned to client needs. Electronic security services include access control, IP camera systems, guard tour systems and vehicle control/park monitoring. </p>
                 </div>
                 <div id="apply">
                     <h3 class="text-2xl font-bold mb-4">Apply Online</h3>
                     <p class="text-gray-400">Ready to take the next step? Our application process is handled securely online. Please prepare your resume and relevant certifications. We will review your application and contact qualified candidates for the next phase.</p>
+                    
+                    <a href="https://forms.office.com/r/1FpnWmvt94" target="_blank" rel="noopener" class="inline-block mt-4 px-6 py-3 bg-blue-600 hover:bg-blue-700 text-white font-semibold rounded-lg transition-colors">
+                        Apply Now
+                    </a>
                 </div>
             </div>
         </section>
@@ -202,22 +229,22 @@
 
         <!-- Contact Section -->
         <section id="contact" class="container mx-auto px-6 py-16">
-            <h2 class="text-3xl font-bold text-center mb-12">Get in Touch</h2>
+            <h2 class="text-3xl font-bold text-center mb-12">How can we be of service?</h2>
             <div class="max-w-2xl mx-auto bg-gray-800 p-8 rounded-lg">
                 <form>
                     <div class="grid md:grid-cols-2 gap-6">
                         <div class="mb-4">
                             <label for="name" class="block mb-2 text-sm font-medium text-gray-300">Your Name</label>
-                            <input type="text" id="name" class="bg-gray-700 border border-gray-600 text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="John Doe" required>
+                            <input type="text" id="name" class="bg-gray-700 border border-gray-600 text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="Your name" required>
                         </div>
                         <div class="mb-4">
                             <label for="email" class="block mb-2 text-sm font-medium text-gray-300">Your Email</label>
-                            <input type="email" id="email" class="bg-gray-700 border border-gray-600 text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="name@company.com" required>
+                            <input type="email" id="email" class="bg-gray-700 border border-gray-600 text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="Your email address" required>
                         </div>
                     </div>
                     <div class="mb-6">
                         <label for="message" class="block mb-2 text-sm font-medium text-gray-300">Your Message</label>
-                        <textarea id="message" rows="4" class="bg-gray-700 border border-gray-600 text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="How can we help you?" required></textarea>
+                        <textarea id="message" rows="4" class="bg-gray-700 border border-gray-600 text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="Please provide a brief description of your inquiry." required></textarea>
                     </div>
                     <button type="submit" class="text-white bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-800 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center transition-colors">Send Message</button>
                 </form>
@@ -229,10 +256,57 @@
     <!-- Footer -->
     <footer class="bg-gray-800">
         <div class="container mx-auto px-6 py-8">
-            <div class="flex flex-col md:flex-row justify-between items-center">
+            <div class="flex flex-col md:flex-row justify-between items-start text-sm">
                 <div class="text-center md:text-left mb-4 md:mb-0">
-                    <p class="text-lg font-semibold">KESSI Security Agency</p>
-                    <p class="text-sm text-gray-400">Your safety, our priority.</p>
+                    <p class="text-lg font-semibold">KingEdward Security Services Inc. "KESSI"</p>
+                    <p class="text-sm text-gray-400 w-80 mt-2 italic">Your safety is our priority — Total security solutions across the Philippines. 
+Trusted security personnel, electronic security systems, training & specialized risk services tailored to commercial, industrial, residential and institutional clients. </p>
+                </div>
+                <div>
+                    <div class="map-responsive" aria-label="Map showing KingEdward Security Services Inc location at 13.7304541, 121.0819056">
+                    <iframe
+                        loading="lazy"
+                        allowfullscreen
+                        referrerpolicy="no-referrer-when-downgrade"
+                        src="https://www.google.com/maps?q=13.7304541,121.0819056&z=17&output=embed"
+                        title="KINGEDWARD SECURITY SERVICES INC — Google Maps">
+                    </iframe>
+                    </div>
+
+                    <!-- Fallback / Link to the full Google Maps page -->
+                    <p>
+                    <a href="https://www.google.com/maps/place/KINGEDWARD+SECURITY+SERVICES+INC/@13.7304541,121.0819056,17z" target="_blank" rel="noopener noreferrer">
+                        Open KINGEDWARD SECURITY SERVICES INC on Google Maps
+                    </a>
+                    </p>
+
+                </div>
+                <div class="text-center md:text-left mb-4 md:mb-0">
+                    <p>
+                        Office Address:
+                        <address>
+                            Sitio Silangan 1<br/>
+                            San Isidro, Batangas City, 4200<br/>
+                        </address>
+                    </p>
+
+                    <p class="mt-4">
+                        Business Hours:<br/>Monday - Friday, 8:00 AM - 5:00 PM
+                        <br/>
+                        <b class="text-red-500">24/7 HOTLINE - 0917 110 2671</b>
+                    </p>
+                </div>
+                <div class="text-center md:text-left mb-4 md:mb-0">
+                    <p>
+                        Contact Number:
+                        <br/>
+                        0917 103 2616
+                    </p>
+                    <p class=" mt-4">
+                        Email Address:
+                        <br/>
+                        kessi801@kessi.ph
+                    </p>
                 </div>
                 <div class="flex space-x-6">
                     <!-- Facebook Icon -->
@@ -242,17 +316,10 @@
                             <path fill-rule="evenodd" d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z" clip-rule="evenodd" />
                         </svg>
                     </a>
-                    <!-- LinkedIn Icon -->
-                    <a href="#" class="text-gray-400 hover:text-white transition-colors">
-                        <span class="sr-only">LinkedIn</span>
-                        <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
-                            <path fill-rule="evenodd" d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z" clip-rule="evenodd" />
-                        </svg>
-                    </a>
                 </div>
             </div>
             <div class="mt-8 border-t border-gray-700 pt-4 text-center text-gray-500 text-sm">
-                &copy; 2024 KESSI. All Rights Reserved.
+                &copy; 2025 KingEdward Security Services Inc. (KESSI). All Rights Reserved.
             </div>
         </div>
     </footer>
@@ -301,7 +368,7 @@
         prevBtn.addEventListener('click', prevSlide);
 
         // Auto-play carousel
-        let slideInterval = setInterval(nextSlide, 5000); // Change slide every 5 seconds
+        let slideInterval = setInterval(nextSlide, 10000); // Change slide every 5 seconds
 
         // Smooth scrolling for navigation links
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
