New website updates

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
             <div class="flex items-center space-x-3">
                 <img src="assets/img/kessi-logo-sm.png" alt="KESSI Logo" class="h-12 w-auto object-contain" style="max-height:48px;">
-                <a href="#" class="text-2xl font-bold text-white">KingEdward Security Services Inc. KESSI</a>
+                <a href="#" class="text-xl font-bold text-white">KingEdward Security Services Inc. KESSI</a>
             </div>
             <nav class="hidden md:flex items-center space-x-8">
                 <a href="#home" class="nav-link text-gray-300">Home</a>
@@ -134,7 +134,7 @@
                     <div class="absolute inset-0 bg-black/60 flex items-center justify-center">
                         <div class="text-center text-white p-4">
                             <h1 class="text-4xl md:text-6xl font-black uppercase tracking-wider">24/7 On-premise Security</h1>
-                            <p class="mt-4 text-lg md:text-xl max-w-2xl">...</p>
+                            <p class="mt-4 text-lg md:text-xl max-w-2xl"></p>
                         </div>
                     </div>
                 </div>
@@ -163,7 +163,7 @@
         <!-- Services Section -->
         <section id="services" class="container mx-auto px-6 py-16">
             <h2 class="text-3xl font-bold text-center mb-12">Our Core Services</h2>
-            <div class="grid md:grid-cols-3 gap-8">
+            <div class="grid md:grid-cols-2 gap-8">
                 <!-- Service 1 -->
                 <div class="service-card bg-gray-800 rounded-lg overflow-hidden text-center p-8">
                     <img src="assets/img/kessi-guard4.jpg" alt="Threat Assessment" class="w-full h-48 object-cover object-[25%_33%] rounded-md mb-6">
@@ -176,6 +176,13 @@
                     <h3 class="text-xl font-bold mb-2">Security Personnel<br>(uniformed guards & supervisors)</h3>
                     <p class="text-gray-400">Provide highly trained security personnel for round-the-clock monitoring, patrols, and rapid response to incidents.</p>
                 </div>
+                <!-- Service 3 -->
+                <div class="service-card bg-gray-800 rounded-lg overflow-hidden text-center p-8">
+                    <img src="assets/img/IMG_5726.JPEG" alt="Surveillance" class="w-full h-48 object-cover object-[25%_65%] rounded-md mb-6">
+                    <h3 class="text-xl font-bold mb-2">Surveillance : Mobile Patrol & Service Vehicles</h3>
+                    <p class="text-gray-400">Enhance security coverage with our dedicated fleet of service vehicles. Our trained security personnel conduct mobile surveillance, routine patrols, and rapid deployment across client sites. Our vehicles ensure quick response to incidents, visible deterrence, and thorough monitoring of large or multiple locations.</p>
+                </div>
+
                 <!-- Service 3 -->
                 <div class="service-card bg-gray-800 rounded-lg overflow-hidden text-center p-8">
                     <img src="assets/img/guardwithuniform3.jpg" alt="Threat Assessment" class="w-full h-48 object-cover object-[25%_35%] rounded-md mb-6">
@@ -196,6 +203,12 @@
                 <div class="md:w-1/2">
                     <h2 class="text-3xl font-bold mb-4">About KESSI</h2>
                     <p class="text-gray-400 mb-4">Founded March 2, 2006, KingEdward Security Services, Inc. (KESSI) is a Philippine private security agency that provides security services to private and government establishments nationwide. The organization emphasizes professional standards and continuous growth since inception.</p>
+                    <p class="text-gray-400 mb-4 ml-8"><b>Mission</b><br/>Provide total security protection of lives and properties through reliable, disciplined and well-trained security personnel, supported by continuous training and proper equipment. </p>
+                    <p class="text-gray-400 mb-4 ml-8"><b>Vision &amp; Core Values</b><br/>Vision: To become one of the best security service providers in the Philippines — recognized for standard quality performance and professionalism. 
+<br/>
+Core Values: Kindness, Efficiency, Security & Safety, Service, and Integrity — supported by a culture of excellence, learning and adaptability. </p>
+
+                    <p class="opacity-0">SEC Reg. No: CS200603026 | License to Operate PNPSAGSD PSA-R-04-166272-3856</p>
                 </div>
             </div>
         </section>
