Updated photo dimensions on Our Services

--- a/index.html
+++ b/index.html
@@ -161,31 +161,31 @@
         <div class="section-divider"></div>
 
         <!-- Services Section -->
-        <section id="services" class="container mx-auto px-6 py-16">
+        <section id="services" class="container w-2/3 mx-auto px-6 py-16">
             <h2 class="text-3xl font-bold text-center mb-12">Our Core Services</h2>
             <div class="grid md:grid-cols-2 gap-8">
                 <!-- Service 1 -->
                 <div class="service-card bg-gray-800 rounded-lg overflow-hidden text-center p-8">
-                    <img src="assets/img/kessi-guard4.jpg" alt="Threat Assessment" class="w-full h-48 object-cover object-[25%_33%] rounded-md mb-6">
+                    <img src="assets/img/kessi-guard4.jpg" alt="Threat Assessment" class="w-full h-64 object-cover object-[25%_33%] rounded-md mb-6">
                     <h3 class="text-xl font-bold mb-2"> Security & Safety Training<br/>(firearms, first aid, response)</h3>
                     <p class="text-gray-400">Identify potential risks and vulnerabilities in your environment to implement effective preventive measures before issues arise.</p>
                 </div>
                 <!-- Service 2 -->
                 <div class="service-card bg-gray-800 rounded-lg overflow-hidden text-center p-8">
-                    <img src="assets/img/guardwithuniform2.jpg" alt="Threat Assessment" class="w-full h-48 object-cover object-[25%_35%] rounded-md mb-6">
+                    <img src="assets/img/guardwithuniform2.jpg" alt="Threat Assessment" class="w-full h-64 object-cover object-[25%_35%] rounded-md mb-6">
                     <h3 class="text-xl font-bold mb-2">Security Personnel<br>(uniformed guards & supervisors)</h3>
                     <p class="text-gray-400">Provide highly trained security personnel for round-the-clock monitoring, patrols, and rapid response to incidents.</p>
                 </div>
                 <!-- Service 3 -->
                 <div class="service-card bg-gray-800 rounded-lg overflow-hidden text-center p-8">
-                    <img src="assets/img/IMG_5726.JPEG" alt="Surveillance" class="w-full h-48 object-cover object-[25%_65%] rounded-md mb-6">
+                    <img src="assets/img/IMG_5726.JPEG" alt="Surveillance" class="w-full h-64 object-cover object-[25%_65%] rounded-md mb-6">
                     <h3 class="text-xl font-bold mb-2">Surveillance : Mobile Patrol & Service Vehicles</h3>
                     <p class="text-gray-400">Enhance security coverage with our dedicated fleet of service vehicles. Our trained security personnel conduct mobile surveillance, routine patrols, and rapid deployment across client sites. Our vehicles ensure quick response to incidents, visible deterrence, and thorough monitoring of large or multiple locations.</p>
                 </div>
 
                 <!-- Service 3 -->
                 <div class="service-card bg-gray-800 rounded-lg overflow-hidden text-center p-8">
-                    <img src="assets/img/guardwithuniform3.jpg" alt="Threat Assessment" class="w-full h-48 object-cover object-[25%_35%] rounded-md mb-6">
+                    <img src="assets/img/guardwithuniform3.jpg" alt="Threat Assessment" class="w-full h-64 object-cover object-[25%_37%] rounded-md mb-6">
                     <h3 class="text-xl font-bold mb-2">Emergency Response Planning</h3>
                     <p class="text-gray-400">Develop and execute customized response plans to ensure swift action during crises, minimizing harm and ensuring safety.</p>
                 </div>
