--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ Core Values: Kindness, Efficiency, Security & Safety, Service, and Integrity —
                 </div>
                 <div id="requirements">
                     <h3 class="text-2xl font-bold mb-4">Equipment & Assets</h3>
-                    <p class="text-gray-400">KESSI maintains vehicles, motorcycles, patrol equipment, communications gear, metal detectors, flashlights and firearms inventory aligned to client needs. Electronic security services include access control, IP camera systems, guard tour systems and vehicle control/park monitoring. </p>
+                    <p class="text-gray-400">KESSI maintains vehicles, motorcycles, patrol equipment, communications gear, metal detectors, flashlights and firearms inventory aligned to client needs.</p>
                 </div>
                 <div id="apply">
                     <h3 class="text-2xl font-bold mb-4">Apply Online</h3>
