Updated about us

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                 </div>
                 <div class="md:w-1/2">
                     <h2 class="text-3xl font-bold mb-4">About KESSI</h2>
-                    <p class="text-gray-400 mb-4">Founded March 2, 2006, KingEdward Security Services, Inc. (KESSI) is a Philippine private security agency that provides security services to private and government establishments nationwide. The organization emphasizes professional standards and continuous growth since inception.</p>
+                    <p class="text-gray-400 mb-4">Founded in March 2, 2006, KingEdward Security Services, Inc. (KESSI) is a Philippine private security agency that provides security services to private and government establishments nationwide. The organization emphasizes professional standards and continuous growth since its inception.</p>
                     <p class="text-gray-400 mb-4 ml-8"><b>Mission</b><br/>Provide total security protection of lives and properties through reliable, disciplined and well-trained security personnel, supported by continuous training and proper equipment. </p>
                     <p class="text-gray-400 mb-4 ml-8"><b>Vision &amp; Core Values</b><br/>Vision: To become one of the best security service providers in the Philippines — recognized for standard quality performance and professionalism. 
 <br/>
