--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <style>
         body {
             font-family: 'Futura', 'Futura PT', 'Avenir', 'Century Gothic', sans-serif;
-            background-color: #111827; /* Dark background */
+            background-color: white; /* Dark background */
             color: #F3F4F6; /* Light text */
         }
         .hero-carousel .carousel-item {
@@ -43,7 +43,7 @@
             display: block;
         }
         .section-divider {
-            border-bottom: 1px solid #374151; /* Gray border */
+            border-bottom: 1px solid #dcdcdc; /* Gray border */
             margin: 4rem 0;
         }
         .service-card {
@@ -58,26 +58,26 @@
             transition: color 0.3s ease;
         }
         .nav-link:hover {
-            color: #FF8C00;
+            color: oklch(48.8% 0.243 264.376);
         }
     </style>
 </head>
-<body class="bg-gray-900 text-gray-100">
+<body class="bg-white text-stone-600">
 
     <!-- Header -->
-    <header class="bg-gray-900/80 backdrop-blur-sm sticky top-0 z-50 border-b border-gray-700 shadow-lg">
+    <header class="backdrop-blur-lg bg-white/50 sticky top-0 z-50 shadow-lg">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
             <div class="flex items-center space-x-3">
-                <img src="assets/img/kessi-logo-sm.png" alt="KESSI Logo" class="h-12 w-auto object-contain" style="max-height:48px;">
-                <a href="#" class="text-xl font-bold text-white">KingEdward Security Services Inc. KESSI</a>
+                <img src="assets/img/kessi-logo-sm.png" alt="KESSI Logo" class="h-14 w-auto object-contain">
+                <a href="#" class="text-xl font-bold text-neutral-700">KingEdward Security Services Inc. KESSI</a>
             </div>
             <nav class="hidden md:flex items-center space-x-8">
-                <a href="#home" class="nav-link text-gray-300">Home</a>
-                <a href="#services" class="nav-link text-gray-300">Services</a>
-                <a href="#about" class="nav-link text-gray-300">About KESSI</a>
+                <a href="#home" class="nav-link text-neutral-700">Home</a>
+                <a href="#services" class="nav-link text-neutral-700">Services</a>
+                <a href="#about" class="nav-link text-neutral-700">About KESSI</a>
                 <!-- Careers Dropdown -->
                 <div class="relative group">
-                    <button class="nav-link text-gray-300 flex items-center focus:outline-none">
+                    <button class="nav-link text-neutral-700 flex items-center focus:outline-none">
                         Careers
                         <svg class="w-4 h-4 ml-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
                     </button>
@@ -87,7 +87,7 @@
                         <a href="#apply" class="block px-4 py-2 text-sm text-gray-300 hover:bg-gray-700">Apply Online</a>
                     </div>
                 </div>
-                <a href="#contact" class="nav-link text-gray-300">Contact Us</a>
+                <a href="#contact" class="nav-link text-neutral-700">Contact Us</a>
             </nav>
             <button id="mobile-menu-button" class="md:hidden text-gray-300 hover:text-white">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path></svg>
@@ -121,8 +121,8 @@
                 <!-- Carousel Item 1 -->
                 <div class="carousel-item active h-full">
                     <img src="assets/img/guardwithuniform1.jpg" alt="Security Operations" class="w-full h-full object-cover">
-                    <div class="absolute inset-0 bg-black/60 flex items-center justify-center">
-                        <div class="text-center text-white p-4">
+                    <div class="absolute inset-0 bg-black/40 flex items-center justify-center">
+                        <div class="text-center justify-center flex flex-col items-center text-white p-4">
                             <h1 class="text-4xl md:text-6xl font-black uppercase tracking-wider">Vigilance & Protection</h1>
                             <p class="mt-4 text-lg md:text-xl max-w-2xl">Providing elite security solutions tailored to your unique needs. Your safety is our mission.</p>
                         </div>
@@ -131,8 +131,8 @@
                 <!-- Carousel Item 2 -->
                 <div class="carousel-item h-full">
                     <img src="assets/img/guardwithuniform5.jpg" alt="Advanced Surveillance" class="w-full h-full object-cover">
-                    <div class="absolute inset-0 bg-black/60 flex items-center justify-center">
-                        <div class="text-center text-white p-4">
+                    <div class="absolute inset-0 bg-black/40 flex items-center justify-center">
+                        <div class="text-center justify-center flex flex-col items-center text-white p-4">
                             <h1 class="text-4xl md:text-6xl font-black uppercase tracking-wider">24/7 On-premise Security</h1>
                             <p class="mt-4 text-lg md:text-xl max-w-2xl"></p>
                         </div>
@@ -141,8 +141,8 @@
                 <!-- Carousel Item 3 -->
                 <div class="carousel-item h-full">
                     <img src="assets/img/kessi-guard3.jpg" alt="Expert Security Personnel" class="w-full h-full object-cover">
-                    <div class="absolute inset-0 bg-black/60 flex items-center justify-center">
-                        <div class="text-center text-white p-4">
+                    <div class="absolute inset-0 bg-black/40 flex items-center justify-center">
+                        <div class="text-center justify-center flex flex-col items-center text-white p-4">
                             <h1 class="text-4xl md:text-6xl font-black uppercase tracking-wider">Highly Trained Security Personnel</h1>
                             <p class="mt-4 text-lg md:text-xl max-w-2xl">Our personnel are rigorously trained to handle any situation with professionalism and discretion.</p>
                         </div>
@@ -162,32 +162,32 @@
 
         <!-- Services Section -->
         <section id="services" class="container w-2/3 mx-auto px-6 py-16">
-            <h2 class="text-3xl font-bold text-center mb-12">Our Core Services</h2>
+            <h2 class="text-3xl font-bold text-center mb-12 text-neutral-700">Our Core Services</h2>
             <div class="grid md:grid-cols-2 gap-8">
                 <!-- Service 1 -->
-                <div class="service-card bg-gray-800 rounded-lg overflow-hidden text-center p-8">
+                <div class="service-card rounded-lg overflow-hidden text-center p-8">
                     <img src="assets/img/kessi-guard4.jpg" alt="Threat Assessment" class="w-full h-64 object-cover object-[25%_33%] rounded-md mb-6">
                     <h3 class="text-xl font-bold mb-2"> Security & Safety Training<br/>(firearms, first aid, response)</h3>
                     <p class="text-gray-400">Identify potential risks and vulnerabilities in your environment to implement effective preventive measures before issues arise.</p>
                 </div>
                 <!-- Service 2 -->
-                <div class="service-card bg-gray-800 rounded-lg overflow-hidden text-center p-8">
+                <div class="service-card rounded-lg overflow-hidden text-center p-8">
                     <img src="assets/img/guardwithuniform2.jpg" alt="Threat Assessment" class="w-full h-64 object-cover object-[25%_35%] rounded-md mb-6">
                     <h3 class="text-xl font-bold mb-2">Security Personnel<br>(uniformed guards & supervisors)</h3>
                     <p class="text-gray-400">Provide highly trained security personnel for round-the-clock monitoring, patrols, and rapid response to incidents.</p>
                 </div>
                 <!-- Service 3 -->
-                <div class="service-card bg-gray-800 rounded-lg overflow-hidden text-center p-8">
+                <div class="service-card rounded-lg overflow-hidden text-center p-8">
                     <img src="assets/img/IMG_5726.JPEG" alt="Surveillance" class="w-full h-64 object-cover object-[25%_65%] rounded-md mb-6">
                     <h3 class="text-xl font-bold mb-2">Surveillance : Mobile Patrol & Service Vehicles</h3>
                     <p class="text-gray-400">Enhance security coverage with our dedicated fleet of service vehicles. Our trained security personnel conduct mobile surveillance, routine patrols, and rapid deployment across client sites. Our vehicles ensure quick response to incidents, visible deterrence, and thorough monitoring of large or multiple locations.</p>
                 </div>
 
                 <!-- Service 3 -->
-                <div class="service-card bg-gray-800 rounded-lg overflow-hidden text-center p-8">
+                <div class="service-card rounded-lg overflow-hidden text-center p-8">
                     <img src="assets/img/guardwithuniform3.jpg" alt="Threat Assessment" class="w-full h-64 object-cover object-[25%_37%] rounded-md mb-6">
                     <h3 class="text-xl font-bold mb-2">Emergency Response Planning</h3>
-                    <p class="text-gray-400">Develop and execute customized response plans to ensure swift action during crises, minimizing harm and ensuring safety.</p>
+                    <p class="text-neutral-500">Develop and execute customized response plans to ensure swift action during crises, minimizing harm and ensuring safety.</p>
                 </div>
             </div>
         </section>
@@ -198,13 +198,13 @@
         <section id="about" class="container mx-auto px-6 py-16">
             <div class="flex flex-col md:flex-row items-center gap-12">
                 <div class="md:w-1/2">
-                     <img src="assets/img/801.png" alt="About KESSI" class="rounded-lg shadow-2xl grayscale">
+                     <img src="assets/img/801.png" alt="About KESSI" class="rounded-lg grayscale">
                 </div>
                 <div class="md:w-1/2">
                     <h2 class="text-3xl font-bold mb-4">About KESSI</h2>
-                    <p class="text-gray-400 mb-4">Founded in March 2, 2006, KingEdward Security Services, Inc. (KESSI) is a Philippine private security agency that provides security services to private and government establishments nationwide. The organization emphasizes professional standards and continuous growth since its inception.</p>
-                    <p class="text-gray-400 mb-4 ml-8"><b>Mission</b><br/>Provide total security protection of lives and properties through reliable, disciplined and well-trained security personnel, supported by continuous training and proper equipment. </p>
-                    <p class="text-gray-400 mb-4 ml-8"><b>Vision &amp; Core Values</b><br/>Vision: To become one of the best security service providers in the Philippines — recognized for standard quality performance and professionalism. 
+                    <p class="text-neutral-500 mb-4">Founded in March 2, 2006, KingEdward Security Services, Inc. (KESSI) is a Philippine private security agency that provides security services to private and government establishments nationwide. The organization emphasizes professional standards and continuous growth since its inception.</p>
+                    <p class="text-neutral-500 mb-4 ml-8"><b>Mission</b><br/>Provide total security protection of lives and properties through reliable, disciplined and well-trained security personnel, supported by continuous training and proper equipment. </p>
+                    <p class="text-neutral-500 mb-4 ml-8"><b>Vision &amp; Core Values</b><br/>Vision: To become one of the best security service providers in the Philippines — recognized for standard quality performance and professionalism. 
 <br/>
 Core Values: Kindness, Efficiency, Security & Safety, Service, and Integrity — supported by a culture of excellence, learning and adaptability. </p>
 
@@ -243,21 +243,21 @@ Core Values: Kindness, Efficiency, Security & Safety, Service, and Integrity —
         <!-- Contact Section -->
         <section id="contact" class="container mx-auto px-6 py-16">
             <h2 class="text-3xl font-bold text-center mb-12">How can we be of service?</h2>
-            <div class="max-w-2xl mx-auto bg-gray-800 p-8 rounded-lg">
+            <div class="max-w-2xl mx-auto bg-gray-200 p-8 rounded-lg">
                 <form>
                     <div class="grid md:grid-cols-2 gap-6">
                         <div class="mb-4">
-                            <label for="name" class="block mb-2 text-sm font-medium text-gray-300">Your Name</label>
-                            <input type="text" id="name" class="bg-gray-700 border border-gray-600 text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="Your name" required>
+                            <label for="name" class="block mb-2 text-sm font-medium text-neutral-500">Your Name</label>
+                            <input type="text" id="name" class="bg-neutral-100 border border-neutral-300 text-neutral-500 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="Your name" required>
                         </div>
                         <div class="mb-4">
-                            <label for="email" class="block mb-2 text-sm font-medium text-gray-300">Your Email</label>
-                            <input type="email" id="email" class="bg-gray-700 border border-gray-600 text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="Your email address" required>
+                            <label for="email" class="block mb-2 text-sm font-medium text-neutral-500">Your Email</label>
+                            <input type="email" id="email" class="bg-neutral-100 border border-neutral-300 text-neutral-500 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="Your email address" required>
                         </div>
                     </div>
                     <div class="mb-6">
-                        <label for="message" class="block mb-2 text-sm font-medium text-gray-300">Your Message</label>
-                        <textarea id="message" rows="4" class="bg-gray-700 border border-gray-600 text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="Please provide a brief description of your inquiry." required></textarea>
+                        <label for="message" class="block mb-2 text-sm font-medium text-neutral-500">Your Message</label>
+                        <textarea id="message" rows="4" class="bg-neutral-100 border border-neutral-300 text-neutral-500 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="Please provide a brief description of your inquiry." required></textarea>
                     </div>
                     <button type="submit" class="text-white bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-800 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center transition-colors">Send Message</button>
                 </form>
@@ -267,11 +267,11 @@ Core Values: Kindness, Efficiency, Security & Safety, Service, and Integrity —
     </main>
 
     <!-- Footer -->
-    <footer class="bg-gray-800">
-        <div class="container mx-auto px-6 py-8">
-            <div class="flex flex-col md:flex-row justify-between items-start text-sm">
+    <footer class="bg-neutral-800">
+        <div class="container mx-auto px-6 py-12">
+            <div class="flex flex-col md:flex-row justify-between items-start text-sm text-neutral-400">
                 <div class="text-center md:text-left mb-4 md:mb-0">
-                    <p class="text-lg font-semibold">KingEdward Security Services Inc. "KESSI"</p>
+                    <p class="text-lg font-semibold text-white">KingEdward Security Services Inc. "KESSI"</p>
                     <p class="text-sm text-gray-400 w-80 mt-2 italic">Your safety is our priority — Total security solutions across the Philippines. 
 Trusted security personnel, electronic security systems, training & specialized risk services tailored to commercial, industrial, residential and institutional clients. </p>
                 </div>
@@ -323,7 +323,7 @@ Trusted security personnel, electronic security systems, training & specialized 
                 </div>
                 <div class="flex space-x-6">
                     <!-- Facebook Icon -->
-                    <a href="https://www.facebook.com/KESSI801?mibextid=wwXIfr" target="_blank" rel="noopener" class="text-gray-400 hover:text-white transition-colors">
+                    <a href="https://www.facebook.com/KESSI801?mibextid=wwXIfr" target="_blank" rel="noopener" class="text-blue-400 hover:text-white transition-colors">
                         <span class="sr-only">Facebook</span>
                         <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                             <path fill-rule="evenodd" d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z" clip-rule="evenodd" />
@@ -331,7 +331,7 @@ Trusted security personnel, electronic security systems, training & specialized 
                     </a>
                 </div>
             </div>
-            <div class="mt-8 border-t border-gray-700 pt-4 text-center text-gray-500 text-sm">
+            <div class="mt-12 pt-4 text-left text-neutral-500 text-sm">
                 &copy; 2025 KingEdward Security Services Inc. (KESSI). All Rights Reserved.
             </div>
         </div>
